# AI-RACE

./: .gitignore  README  check_data.py  setup_env.sh
var2026-digital-twin/: Dockerfile  docker-compose.yml  pyproject.toml
var2026-digital-twin/configs/experiments/: README.md  a_baseline.json  c_edge_loss.json  d_directional_background.json  d_full_image_lpips.json  f_staged_mse.json
var2026-digital-twin/scripts/: analyze_data.py  auto_pipeline.py  check_submission.py  convert_var_to_nerfstudio.py  downscale_images.py  evaluate_local_validation.py  inspect_scene.py  make_submission.py  make_val_split.py  prepare_round2_data.py  render_test_pose.py  run_experiment_suite.py  run_local_validation.py  train_a_configs.sh
var2026-digital-twin/scripts/.ipynb_checkpoints/: auto_pipeline-checkpoint.py  check_submission-checkpoint.py  convert_var_to_nerfstudio-checkpoint.py  make_submission-checkpoint.py  render_test_pose-checkpoint.py
var2026-digital-twin/var_nvs/: __init__.py  directional_background_splatfacto.py  edge_splatfacto.py  method_configs.py  perceptual_splatfacto.py  staged_mse_splatfacto.py
